--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -132,10 +132,10 @@ body {
   border-radius: 3px;
 }
 .bg-primary {
-  background-color: #149dcc !important;
+  background-color: #0b2c51 !important;
 }
 .bg-success {
-  background-color: #f7ed4a !important;
+  background-color: #0b2c51 !important;
 }
 .bg-info {
   background-color: #82786e !important;
@@ -148,8 +148,8 @@ body {
 }
 .btn-primary,
 .btn-primary:active {
-  background-color: #149dcc !important;
-  border-color: #149dcc !important;
+  background-color: #0b2c51 !important;
+  border-color: #0b2c51 !important;
   color: #ffffff !important;
 }
 .btn-primary:hover,
@@ -157,34 +157,34 @@ body {
 .btn-primary.focus,
 .btn-primary.active {
   color: #ffffff !important;
-  background-color: #0d6786 !important;
-  border-color: #0d6786 !important;
+  background-color: #02070e !important;
+  border-color: #02070e !important;
 }
 .btn-primary.disabled,
 .btn-primary:disabled {
   color: #ffffff !important;
-  background-color: #0d6786 !important;
-  border-color: #0d6786 !important;
+  background-color: #02070e !important;
+  border-color: #02070e !important;
 }
 .btn-secondary,
 .btn-secondary:active {
-  background-color: #ff3366 !important;
-  border-color: #ff3366 !important;
-  color: #ffffff !important;
+  background-color: #f7ed4a !important;
+  border-color: #f7ed4a !important;
+  color: #3f3c03 !important;
 }
 .btn-secondary:hover,
 .btn-secondary:focus,
 .btn-secondary.focus,
 .btn-secondary.active {
-  color: #ffffff !important;
-  background-color: #e50039 !important;
-  border-color: #e50039 !important;
+  color: #3f3c03 !important;
+  background-color: #eadd0a !important;
+  border-color: #eadd0a !important;
 }
 .btn-secondary.disabled,
 .btn-secondary:disabled {
-  color: #ffffff !important;
-  background-color: #e50039 !important;
-  border-color: #e50039 !important;
+  color: #3f3c03 !important;
+  background-color: #eadd0a !important;
+  border-color: #eadd0a !important;
 }
 .btn-info,
 .btn-info:active {
@@ -208,23 +208,23 @@ body {
 }
 .btn-success,
 .btn-success:active {
-  background-color: #f7ed4a !important;
-  border-color: #f7ed4a !important;
-  color: #3f3c03 !important;
+  background-color: #0b2c51 !important;
+  border-color: #0b2c51 !important;
+  color: #ffffff !important;
 }
 .btn-success:hover,
 .btn-success:focus,
 .btn-success.focus,
 .btn-success.active {
-  color: #3f3c03 !important;
-  background-color: #eadd0a !important;
-  border-color: #eadd0a !important;
+  color: #ffffff !important;
+  background-color: #02070e !important;
+  border-color: #02070e !important;
 }
 .btn-success.disabled,
 .btn-success:disabled {
-  color: #3f3c03 !important;
-  background-color: #eadd0a !important;
-  border-color: #eadd0a !important;
+  color: #ffffff !important;
+  background-color: #02070e !important;
+  border-color: #02070e !important;
 }
 .btn-warning,
 .btn-warning:active {
@@ -312,42 +312,42 @@ body {
 .btn-primary-outline,
 .btn-primary-outline:active {
   background: none;
-  border-color: #0b566f;
-  color: #0b566f;
+  border-color: #000000;
+  color: #000000;
 }
 .btn-primary-outline:hover,
 .btn-primary-outline:focus,
 .btn-primary-outline.focus,
 .btn-primary-outline.active {
   color: #ffffff;
-  background-color: #149dcc;
-  border-color: #149dcc;
+  background-color: #0b2c51;
+  border-color: #0b2c51;
 }
 .btn-primary-outline.disabled,
 .btn-primary-outline:disabled {
   color: #ffffff !important;
-  background-color: #149dcc !important;
-  border-color: #149dcc !important;
+  background-color: #0b2c51 !important;
+  border-color: #0b2c51 !important;
 }
 .btn-secondary-outline,
 .btn-secondary-outline:active {
   background: none;
-  border-color: #cc0033;
-  color: #cc0033;
+  border-color: #d2c609;
+  color: #d2c609;
 }
 .btn-secondary-outline:hover,
 .btn-secondary-outline:focus,
 .btn-secondary-outline.focus,
 .btn-secondary-outline.active {
-  color: #ffffff;
-  background-color: #ff3366;
-  border-color: #ff3366;
+  color: #3f3c03;
+  background-color: #f7ed4a;
+  border-color: #f7ed4a;
 }
 .btn-secondary-outline.disabled,
 .btn-secondary-outline:disabled {
-  color: #ffffff !important;
-  background-color: #ff3366 !important;
-  border-color: #ff3366 !important;
+  color: #3f3c03 !important;
+  background-color: #f7ed4a !important;
+  border-color: #f7ed4a !important;
 }
 .btn-info-outline,
 .btn-info-outline:active {
@@ -372,22 +372,22 @@ body {
 .btn-success-outline,
 .btn-success-outline:active {
   background: none;
-  border-color: #d2c609;
-  color: #d2c609;
+  border-color: #000000;
+  color: #000000;
 }
 .btn-success-outline:hover,
 .btn-success-outline:focus,
 .btn-success-outline.focus,
 .btn-success-outline.active {
-  color: #3f3c03;
-  background-color: #f7ed4a;
-  border-color: #f7ed4a;
+  color: #ffffff;
+  background-color: #0b2c51;
+  border-color: #0b2c51;
 }
 .btn-success-outline.disabled,
 .btn-success-outline:disabled {
-  color: #3f3c03 !important;
-  background-color: #f7ed4a !important;
-  border-color: #f7ed4a !important;
+  color: #ffffff !important;
+  background-color: #0b2c51 !important;
+  border-color: #0b2c51 !important;
 }
 .btn-warning-outline,
 .btn-warning-outline:active {
@@ -464,13 +464,13 @@ body {
   border-color: #ffffff;
 }
 .text-primary {
-  color: #149dcc !important;
+  color: #0b2c51 !important;
 }
 .text-secondary {
-  color: #ff3366 !important;
+  color: #f7ed4a !important;
 }
 .text-success {
-  color: #f7ed4a !important;
+  color: #0b2c51 !important;
 }
 .text-info {
   color: #82786e !important;
@@ -489,15 +489,15 @@ body {
 }
 a.text-primary:hover,
 a.text-primary:focus {
-  color: #0b566f !important;
+  color: #000000 !important;
 }
 a.text-secondary:hover,
 a.text-secondary:focus {
-  color: #cc0033 !important;
+  color: #d2c609 !important;
 }
 a.text-success:hover,
 a.text-success:focus {
-  color: #d2c609 !important;
+  color: #000000 !important;
 }
 a.text-info:hover,
 a.text-info:focus {
@@ -547,8 +547,8 @@ a.text-black:focus {
   border-radius: 100px !important;
 }
 .mbr-gallery-filter li.active .btn {
-  background-color: #149dcc;
-  border-color: #149dcc;
+  background-color: #0b2c51;
+  border-color: #0b2c51;
   color: #ffffff;
 }
 .mbr-gallery-filter li.active .btn:focus {
@@ -565,15 +565,15 @@ a.text-black:focus {
 }
 a,
 a:hover {
-  color: #149dcc;
+  color: #0b2c51;
 }
 .mbr-plan-header.bg-primary .mbr-plan-subtitle,
 .mbr-plan-header.bg-primary .mbr-plan-price-desc {
-  color: #b4e6f8;
+  color: #599de8;
 }
 .mbr-plan-header.bg-success .mbr-plan-subtitle,
 .mbr-plan-header.bg-success .mbr-plan-price-desc {
-  color: #ffffff;
+  color: #599de8;
 }
 .mbr-plan-header.bg-info .mbr-plan-subtitle,
 .mbr-plan-header.bg-info .mbr-plan-price-desc {
@@ -690,7 +690,7 @@ blockquote {
   padding: 10px 0 10px 20px;
   font-size: 1.09rem;
   position: relative;
-  border-color: #149dcc;
+  border-color: #0b2c51;
   border-width: 3px;
 }
 ul,
@@ -779,7 +779,7 @@ pre {
   text-align: center;
   position: relative;
   border: 2px solid #c0a375;
-  border-color: #149dcc;
+  border-color: #0b2c51;
   color: #232323;
   cursor: pointer;
 }
@@ -790,7 +790,7 @@ pre {
 }
 .btn-social:hover {
   color: #fff;
-  background: #149dcc;
+  background: #0b2c51;
 }
 .btn-social + .btn {
   margin-left: .1rem;
@@ -798,11 +798,11 @@ pre {
 /* Footer */
 .mbr-footer-content li::before,
 .mbr-footer .mbr-contacts li::before {
-  background: #149dcc;
+  background: #0b2c51;
 }
 .mbr-footer-content li a:hover,
 .mbr-footer .mbr-contacts li a:hover {
-  color: #149dcc;
+  color: #0b2c51;
 }
 .footer3 input[type="email"],
 .footer4 input[type="email"] {
@@ -1423,10 +1423,13 @@ body {
 .cid-rjY8k9qeS4 H2 {
   color: #0b2c51;
 }
+.cid-rjY8k9qeS4 B {
+  color: #277c8d;
+}
 .cid-rjY8nGO2bK {
   padding-top: 0px;
-  padding-bottom: 30px;
-  background-color: #277c8d;
+  padding-bottom: 0px;
+  background-color: #ffffff;
 }
 .cid-rjY8nGO2bK h4 {
   font-weight: 500;
@@ -1444,25 +1447,26 @@ body {
   height: 100%;
 }
 .cid-rjY8nGO2bK P {
-  color: #ffffff;
+  color: #0b2c51;
 }
 .cid-rjY8nGO2bK .card-title {
-  color: #f7ed4a;
+  color: #277c8d;
 }
 .cid-rjY8qEjr8k {
-  padding-top: 30px;
-  padding-bottom: 30px;
+  padding-top: 15px;
+  padding-bottom: 15px;
   background-color: #ffffff;
 }
 .cid-rjY8qEjr8k .line {
-  background-color: #149dcc;
-  color: #149dcc;
+  background-color: #0b2c51;
+  color: #0b2c51;
   align: center;
   height: 2px;
   margin: 0 auto;
 }
 .cid-rjY8qEjr8k .section-text {
   padding: 2rem 0;
+  color: #0b2c51;
 }
 .cid-rjY8qEjr8k .inner-container {
   margin: 0 auto;
@@ -1473,9 +1477,9 @@ body {
   }
 }
 .cid-rjY8DRhmyp {
-  padding-top: 90px;
-  padding-bottom: 90px;
-  background-color: #ffffff;
+  padding-top: 45px;
+  padding-bottom: 45px;
+  background-color: #0b2c51;
 }
 .cid-rjY8DRhmyp p {
   margin-bottom: 0;
@@ -1483,15 +1487,12 @@ body {
 .cid-rjY8DRhmyp .card-box {
   z-index: 1;
   position: relative;
-  background-color: rgba(15, 118, 153, 0.6);
+  background-color: rgba(11, 44, 81, 0);
   height: 100%;
   width: 100%;
   pointer-events: none;
 }
 .cid-rjY8DRhmyp .card-box .card-title {
-  pointer-events: all;
-}
-.cid-rjY8DRhmyp .card-box .mbr-text {
   pointer-events: all;
 }
 .cid-rjY8DRhmyp .media-container-row {
@@ -1522,9 +1523,12 @@ body {
 .cid-rjY8DRhmyp .card {
   padding-bottom: 2rem;
 }
+.cid-rjY8DRhmyp .mbr-section-title {
+  color: #f7ed4a;
+}
 .cid-rjY8Le6KKg {
-  padding-top: 90px;
-  padding-bottom: 90px;
+  padding-top: 60px;
+  padding-bottom: 60px;
   background-color: #ffffff;
 }
 .cid-rjY8Le6KKg h2 {
@@ -1584,10 +1588,16 @@ body {
     font-size: 40px !important;
   }
 }
+.cid-rjY8Le6KKg .mbr-text {
+  color: #0b2c51;
+}
+.cid-rjY8Le6KKg H2 {
+  color: #277c8d;
+}
 .cid-rjY8NUp1Jl {
-  padding-top: 60px;
-  padding-bottom: 60px;
-  background-color: #ffffff;
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background-color: #0b2c51;
 }
 .cid-rjY8Sw30w3 {
   padding-top: 90px;
